# faramotics

./: CMakeLists.txt  CMakeLists.txt.old  Findfaramotics.cmake  README.md  README.txt
models/: campusNordUPC_edges.mtl  curve_garden_bridge.3ds  fmeBigDoor.mtl
src/: CMakeLists.txt  CMakeLists.txt.old  deviceConsts.h  dynamicSceneRender.cpp  dynamicSceneRender.h  pose.cpp  pose.h  rangeImage.cpp  rangeImage.h  rangeScan2D.cpp  rangeScan2D.h  rangeSector.cpp  rangeSector.h  sceneRender.cpp  sceneRender.h  window.cpp  window.h
src/examples/: CMakeLists.txt  assimpTestMain.cpp  point_cloud.cpp  poseMain.cpp  scanVisualizationMain.cpp  sceneRenderMain.cpp  simple.cpp  timeTestMain.cpp  visualizationTest.cpp  visualization_test_gripper.cpp
src/glm_src/: glm.c  glm.h
